Semantic typeVisitor